--- a/pages/teams.html
+++ b/pages/teams.html
@@ -10,7 +10,9 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="/assets/img/Logo.png">
+            <a href="/index.html">
+                <img src="/assets/img/Logo.png">
+            </a>
         </div>
 
         <div class="nav-links">
