--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>LA LEGA - Continental Cup Teams</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="icon" type="image/x-icon" href="/assets/img/Logo.png">
 </head>
 
 <body>
