--- a/pages/teams.html
+++ b/pages/teams.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>LA LEGA - Teams</title>
     <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="icon" type="image/x-icon" href="/assets/img/Logo.png">
 </head>
 
 <body>
