--- a/pages/teams.html
+++ b/pages/teams.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 
+    <!-- Continental Cup -->
     <div class="description-section">
         <div class="title-with-logo">
             <img src="/assets/img/Con-Cup-logo.png" alt="Continental Cup Logo">
@@ -102,6 +103,7 @@
         </div>
     </div>
 
+    <!-- Asia Division Team -->
     <div class="description-section">
         <div class="title-with-logo">
             <img src="/assets/img/Trophy.png" alt="Season 2 Logo">
@@ -118,7 +120,8 @@
             stage for another thrilling chapter in the league.
         </p>
         <p>
-            Whether you're following your favorite team or discovering new favorites, this is your go-to hub for everything
+            Whether you're following your favorite team or discovering new favorites, this is your go-to hub for
+            everything
             related to the Season 2 squads.
         </p>
     </div>
@@ -219,27 +222,28 @@
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
                 <div class="team_name">Team Name</div>
             </a>
-        </div>        
+        </div>
     </div>
 
+    <!-- Challengers Team -->
     <div class="description-section">
         <div class="title-with-logo">
-            <img src="/assets/img/Trophy.png" alt="Season 2 Logo">
-            <h2>Season 2 Teams</h2>
+            <img src="/assets/img/Trophy2.png" alt="Challengers Logo">
+            <h2>Challengers Teams</h2>
         </div>
         <p>
-            Welcome to the Season 2 Teams section, where new rivalries ignite and returning legends aim to cement their
-            dominance. This season introduces fresh talent and revamped rosters, promising even more intense competition
-            across the league.
+            The Challengers Teams section shines a spotlight on the rising forces from the Pacific region. These teams
+            represent the grit,
+            resilience, and untapped potential of a region hungry to make its mark on the international stage.
         </p>
         <p>
-            From rising contenders to recognized powerhouses, each team brings its unique style,
-            strategy, and spirit to the court. Explore the profiles, and dynamic lineups as we set the
-            stage for another thrilling chapter in the league.
+            From the coasts of Australia to neighboring Pacific nations, these challengers bring a fresh wave of energy,
+            showcasing homegrown talent and dynamic play styles. They may be underdogs in name, but their determination,
+            teamwork, and passion for the game make them serious contenders in every match.
         </p>
         <p>
-            Whether you're following your favorite team or discovering new favorites, this is your go-to hub for everything
-            related to the Season 2 squads.
+            Get to know the teams, their stories, and the players leading the Pacific charge as they step up to
+            challenge the established elite.
         </p>
     </div>
 
@@ -291,7 +295,7 @@
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
                 <div class="team_name">Team Name</div>
             </a>
-        </div>         
+        </div>
     </div>
 </body>
 
