--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>LA LEGA - Continental Cup Teams</title>
+    <title>LA LEGA</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/Logo.png">
 </head>
@@ -22,10 +22,9 @@
             <a id="nav-matches" href="pages/matches.html">Schedule & Results</a>
             <a id="nav-standings" href="pages/standings.html">Standings</a>
         </div>
-
     </div>
 
-    Hello world!
+    
 </body>
 
 </html>
