--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <a href="/index.html">
+            <a href="/">
                 <img src="/assets/img/Logo.png">
             </a>
         </div>
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    
+
 </body>
 
 </html>
