--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>LA LEGA</title>
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" type="image/x-icon" href="/assets/img/Logo.png">
+    <link rel="icon" type="image/x-icon" href="/assets/img/Logo3.png">
 </head>
 
 <body>
