--- a/pages/players.html
+++ b/pages/players.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LA LEGA - Players</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/Logo3.png">
@@ -24,6 +25,26 @@
         </div>
     </div>
 
+    <div class="table-container">
+        <table id="players-table" class="players-table">
+          <thead>
+            <tr>
+              <th>Player</th>
+              <th>Team</th>
+              <th>Position</th>
+              <th>Tier</th>
+              <th>Salary</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody id="player-data">
+            <!-- Fetched data goes here -->
+          </tbody>
+        </table>
+      </div>
+
+
+      <script src="/assets/scripts/sheet.js"></script>
 </body>
 
 </html>
