--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LA LEGA</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/Logo3.png">
