--- a/pages/standings.html
+++ b/pages/standings.html
@@ -21,7 +21,7 @@
         <div class="nav-links">
             <a id="nav-teams" href="teams.html">Teams</a>
             <a id="nav-players" href="players.html">Players</a>
-            <a id="nav-matches" href="matches.html">Schedule & Results</a>
+            <a id="nav-matches" href="matches.html">Matches</a>
             <a id="nav-standings" href="standings.html" class="active">Standings</a>
         </div>
     </div>
