--- a/pages/teams.html
+++ b/pages/teams.html
@@ -20,7 +20,7 @@
         <div class="nav-links">
             <a id="nav-teams" href="teams.html" class="active">Teams</a>
             <a id="nav-players" href="players.html">Players</a>
-            <a id="nav-matches" href="matches.html">Schedule & Results</a>
+            <a id="nav-matches" href="matches.html">Matches</a>
             <a id="nav-standings" href="standings.html">Standings</a>
         </div>
     </div>
