--- a/pages/teams/continental/indonesia.html
+++ b/pages/teams/continental/indonesia.html
@@ -21,7 +21,7 @@
         <div class="nav-links">
             <a id="nav-teams" href="/pages/teams.html" class="active">Teams</a>
             <a id="nav-players" href="/pages/players.html">Players</a>
-            <a id="nav-matches" href="/pages/matches.html">Schedule & Results</a>
+            <a id="nav-matches" href="/pages/matches.html">Matches</a>
             <a id="nav-standings" href="/pages/standings.html">Standings</a>
         </div>
     </div>
