--- a/pages/matches.html
+++ b/pages/matches.html
@@ -34,7 +34,7 @@
           <option value="Continental Cup">Continental Cup</option>
           <option value="Legacy Cup">Legacy Cup</option>
           <option value="Regular Season">Regular Season</option>
-          <option value="Champions League">Champions League</option>
+          <option value="La Lega">LA LEGA</option>
         </select>
       
         <select id="filter-round">
