--- a/pages/teams.html
+++ b/pages/teams.html
@@ -128,48 +128,63 @@
     </div>
 
     <div class="teams-grid-regular">
+
+        <!-- Mindanao State University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/msu.html" alt="">
+                <img src="/assets/img/teams/MSU.png" alt="" loading="lazy">
+                <div class="team_name">Mindanao State University</div>
             </a>
         </div>
+
+        <!-- National University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/nu.html" alt="">
+                <img src="/assets/img/teams/NU.png" alt="" loading="lazy">
+                <div class="team_name">National University</div>
             </a>
         </div>
+
+        <!-- Adamson University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/season/adu.html" alt="">
+                <img src="/assets/img/teams/ADU.png" alt="" loading="lazy">
+                <div class="team_name">Adamson University</div>
             </a>
         </div>
+
+        <!-- Institute of Technical Education (ITE) -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/ite.html" alt="">
+                <img src="/assets/img/teams/ITE.png" alt="" loading="lazy">
+                <div class="team_name">Institute of Technical Education</div>
             </a>
         </div>
+
+        <!-- Goon International College -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/goon.html" alt="">
+                <img src="/assets/img/teams/GOON.png" alt="" loading="lazy">
+                <div class="team_name">Goon International College</div>
             </a>
         </div>
+
+        <!-- University of Sport Ho Chi Minh City -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/ush.html" alt="">
+                <img src="/assets/img/teams/USH.png" alt="" loading="lazy">
+                <div class="team_name">University of Sport Ho Chi Minh City</div>
             </a>
         </div>
+
+        <!-- PES University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/pes.html" alt="">
+                <img src="/assets/img/teams/PES.png" alt="" loading="lazy">
+                <div class="team_name">People's Education Society University</div>
             </a>
         </div>
+
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
