--- a/pages/teams.html
+++ b/pages/teams.html
@@ -264,12 +264,16 @@
     </div>
 
     <div class="teams-grid-challengers">
+
+        <!-- Kyoto University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/challengers/kyoto.html" alt="">
+                <img src="/assets/img/teams/KYOTO.png" alt="" loading="lazy">
+                <div class="team_name">Kyoto University</div>
             </a>
         </div>
+
+
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
