--- a/pages/teams.html
+++ b/pages/teams.html
@@ -129,11 +129,11 @@
 
     <div class="teams-grid-regular">
 
-        <!-- Mindanao State University -->
+        <!-- De La Salle University -->
         <div class="team">
-            <a href="teams/asia/msu.html" alt="">
-                <img src="/assets/img/teams/MSU.png" alt="" loading="lazy">
-                <div class="team_name">Mindanao State University</div>
+            <a href="teams/asia/dlsu.html" alt="">
+                <img src="/assets/img/teams/DLSU.png" alt="" loading="lazy">
+                <div class="team_name">De La Salle University</div>
             </a>
         </div>
 
@@ -147,9 +147,25 @@
 
         <!-- Adamson University -->
         <div class="team">
-            <a href="teams/season/adu.html" alt="">
+            <a href="teams/asia/adu.html" alt="">
                 <img src="/assets/img/teams/ADU.png" alt="" loading="lazy">
                 <div class="team_name">Adamson University</div>
+            </a>
+        </div>
+
+        <!-- University of the Philippines -->
+        <div class="team">
+            <a href="teams/asia/up.html" alt="">
+                <img src="/assets/img/teams/UP.png" alt="" loading="lazy">
+                <div class="team_name">University of the Philippines</div>
+            </a>
+        </div>
+
+        <!-- Mindanao State University -->
+        <div class="team">
+            <a href="teams/asia/msu.html" alt="">
+                <img src="/assets/img/teams/MSU.png" alt="" loading="lazy">
+                <div class="team_name">Mindanao State University</div>
             </a>
         </div>
 
@@ -158,6 +174,14 @@
             <a href="teams/asia/ite.html" alt="">
                 <img src="/assets/img/teams/ITE.png" alt="" loading="lazy">
                 <div class="team_name">Institute of Technical Education</div>
+            </a>
+        </div>
+
+        <!-- Chuo University -->
+        <div class="team">
+            <a href="teams/asia/chuo.html" alt="">
+                <img src="/assets/img/teams/CHUO.png" alt="" loading="lazy">
+                <div class="team_name">Chuo University</div>
             </a>
         </div>
 
@@ -185,24 +209,6 @@
             </a>
         </div>
 
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
-            </a>
-        </div>
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
-            </a>
-        </div>
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
-            </a>
-        </div>
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
