--- a/pages/teams.html
+++ b/pages/teams.html
@@ -161,6 +161,14 @@
             </a>
         </div>
 
+        <!-- San Beda University -->
+        <div class="team">
+            <a href="teams/asia/sbu.html" alt="">
+                <img src="/assets/img/teams/SBU.png" alt="" loading="lazy">
+                <div class="team_name">San Beda University</div>
+            </a>
+        </div>
+
         <!-- Mindanao State University -->
         <div class="team">
             <a href="teams/asia/msu.html" alt="">
@@ -209,12 +217,6 @@
             </a>
         </div>
 
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
-            </a>
-        </div>
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
