--- a/pages/teams.html
+++ b/pages/teams.html
@@ -217,12 +217,14 @@
             </a>
         </div>
 
+        <!-- University of Queensland -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/uq.html" alt="">
+                <img src="/assets/img/teams/UQ.png" alt="" loading="lazy">
+                <div class="team_name">University of Queensland</div>
             </a>
         </div>
+
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
