--- a/pages/teams.html
+++ b/pages/teams.html
@@ -177,6 +177,14 @@
             </a>
         </div>
 
+        <!-- STI College -->
+        <div class="team">
+            <a href="teams/asia/sti.html" alt="">
+                <img src="/assets/img/teams/STI.png" alt="" loading="lazy">
+                <div class="team_name">STI College</div>
+            </a>
+        </div>
+
         <!-- Institute of Technical Education (ITE) -->
         <div class="team">
             <a href="teams/asia/ite.html" alt="">
@@ -225,12 +233,6 @@
             </a>
         </div>
 
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
-            </a>
-        </div>
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
