--- a/pages/teams/asia/kyoto.html
+++ b/pages/teams/asia/kyoto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LA LEGA - National University</title>
+    <title>LA LEGA - Kyoto University</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="stylesheet" href="/assets/css/teams.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/Logo3.png">
@@ -28,10 +28,10 @@
 
     <div class="team-profile">
         <div class="team-header">
-          <img src="/assets/img/teams/NU.png" alt="Team Logo" class="team-logo">
+          <img src="/assets/img/teams/KYOTO.png" alt="Team Logo" class="team-logo">
           <div class="team-info">
-            <div class="team-name">National University</div>
-            <div class="team-rank">#1 in Division 1</div>
+            <div class="team-name">Kyoto University</div>
+            <div class="team-rank">#1 in Challengers</div>
           </div>
         </div>
     
