--- a/pages/standings.html
+++ b/pages/standings.html
@@ -29,9 +29,9 @@
     <h1>SEASON 2 STANDINGS</h1>
 
     <select id="standings-filter">
-        <option>Continental Cup</option>
-        <option>Legacy Cup</option>
         <option>Regular Season</option>
+        <option>Continental Cup</option>
+        <option>Challengers Cup</option>
       </select>
       
       <table class="standings-table">
