--- a/pages/teams.html
+++ b/pages/teams.html
@@ -283,11 +283,11 @@
             </a>
         </div>
 
-
+        <!-- Seoul National University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/challengers/seoul.html" alt="">
+                <img src="/assets/img/teams/SEOUL.png" alt="" loading="lazy">
+                <div class="team_name">Seoul National University</div>
             </a>
         </div>
         <div class="team">
