--- a/pages/teams.html
+++ b/pages/teams.html
@@ -225,12 +225,15 @@
             </a>
         </div>
 
+
+        <!-- Tsinghua University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/thu.html" alt="">
+                <img src="/assets/img/teams/THU.png" alt="" loading="lazy">
+                <div class="team_name">Tsinghua University</div>
             </a>
         </div>
+        
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
