--- a/pages/teams.html
+++ b/pages/teams.html
@@ -234,12 +234,14 @@
             </a>
         </div>
         
+        <!-- Sungkyunkwan University -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/skku.html" alt="">
+                <img src="/assets/img/teams/SKKU.png" alt="" loading="lazy">
+                <div class="team_name">Sungkyunkwan University</div>
             </a>
         </div>
+
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
