--- a/pages/teams.html
+++ b/pages/teams.html
@@ -242,12 +242,15 @@
             </a>
         </div>
 
+        <!-- Singapore Polytechnic -->
         <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
+            <a href="teams/asia/sp.html" alt="">
+                <img src="/assets/img/teams/SP.png" alt="" loading="lazy">
+                <div class="team_name">Singapore Polytechnic</div>
             </a>
         </div>
+
+
         <div class="team">
             <a href="teams/season/team.html" alt="">
                 <img src="/assets/img/question-mark.png" alt="" loading="lazy">
