--- a/pages/teams.html
+++ b/pages/teams.html
@@ -185,6 +185,14 @@
             </a>
         </div>
 
+        <!-- Goon International College -->
+        <div class="team">
+            <a href="teams/asia/goon.html" alt="">
+                <img src="/assets/img/teams/GOON.png" alt="" loading="lazy">
+                <div class="team_name">Goon International College</div>
+            </a>
+        </div>
+
         <!-- Chuo University -->
         <div class="team">
             <a href="teams/asia/chuo.html" alt="">
@@ -193,11 +201,19 @@
             </a>
         </div>
 
-        <!-- Goon International College -->
+        <!-- Korea University -->
         <div class="team">
-            <a href="teams/asia/goon.html" alt="">
-                <img src="/assets/img/teams/GOON.png" alt="" loading="lazy">
-                <div class="team_name">Goon International College</div>
+            <a href="teams/asia/ku.html" alt="">
+                <img src="/assets/img/teams/KU.png" alt="" loading="lazy">
+                <div class="team_name">Korea University</div>
+            </a>
+        </div>
+
+        <!-- Tsinghua University -->
+        <div class="team">
+            <a href="teams/asia/thu.html" alt="">
+                <img src="/assets/img/teams/THU.png" alt="" loading="lazy">
+                <div class="team_name">Tsinghua University</div>
             </a>
         </div>
 
@@ -224,15 +240,6 @@
                 <div class="team_name">University of Queensland</div>
             </a>
         </div>
-
-
-        <!-- Tsinghua University -->
-        <div class="team">
-            <a href="teams/asia/thu.html" alt="">
-                <img src="/assets/img/teams/THU.png" alt="" loading="lazy">
-                <div class="team_name">Tsinghua University</div>
-            </a>
-        </div>
         
         <!-- Sungkyunkwan University -->
         <div class="team">
@@ -247,14 +254,6 @@
             <a href="teams/asia/sp.html" alt="">
                 <img src="/assets/img/teams/SP.png" alt="" loading="lazy">
                 <div class="team_name">Singapore Polytechnic</div>
-            </a>
-        </div>
-
-
-        <div class="team">
-            <a href="teams/season/team.html" alt="">
-                <img src="/assets/img/question-mark.png" alt="" loading="lazy">
-                <div class="team_name">Team Name</div>
             </a>
         </div>
     </div>
