--- a/pages/teams.html
+++ b/pages/teams.html
@@ -241,11 +241,11 @@
             </a>
         </div>
         
-        <!-- Sungkyunkwan University -->
+        <!-- Lyceum of the Philippines University -->
         <div class="team">
-            <a href="teams/asia/skku.html" alt="">
-                <img src="/assets/img/teams/SKKU.png" alt="" loading="lazy">
-                <div class="team_name">Sungkyunkwan University</div>
+            <a href="teams/asia/lpu.html" alt="">
+                <img src="/assets/img/teams/LPU.png" alt="" loading="lazy">
+                <div class="team_name">Lyceum of the Philippines University</div>
             </a>
         </div>
 
