--- a/pages/teams/asia/lpu.html
+++ b/pages/teams/asia/lpu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LA LEGA - Sungkyunkwan University</title>
+    <title>LA LEGA - Lyceum of the Philippines University</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="stylesheet" href="/assets/css/teams.css">
     <link rel="icon" type="image/x-icon" href="/assets/img/Logo3.png">
@@ -28,9 +28,9 @@
 
     <div class="team-profile">
         <div class="team-header">
-          <img src="/assets/img/teams/SKKU.png" alt="Team Logo" class="team-logo">
+          <img src="/assets/img/teams/LPU.png" alt="Team Logo" class="team-logo">
           <div class="team-info">
-            <div class="team-name">Sungkyunkwan University</div>
+            <div class="team-name">Lyceum of the Philippines University</div>
             <div class="team-rank">#1 in Division 1</div>
           </div>
         </div>
