--- a/pages/teams.html
+++ b/pages/teams.html
@@ -44,61 +44,61 @@
     <div class="teams-grid-continental">
         <div class="team">
             <a href="teams/continental/china.html" alt="Dragons of the Red Sun">
-                <img src="/assets/img/flags/china.svg" alt="Dragons of the Red Sun" loading="lazy">
+                <img src="/assets/img/teams/DRAGONS.png" alt="Dragons of the Red Sun" loading="lazy">
                 <div class="team_name">Dragons of the Red Sun</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/japan.html" alt="Samurai Storm">
-                <img src="/assets/img/flags/japan.svg" alt="Samurai Storm" loading="lazy">
+                <img src="/assets/img/teams/SAMURAI.png" alt="Samurai Storm" loading="lazy">
                 <div class="team_name">Samurai Storm</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/indonesia.html" alt="Timnas">
-                <img src="/assets/img/flags/indonesia.svg" alt="Timnas" loading="lazy">
+                <img src="/assets/img/teams/TIMNAS.png" alt="Timnas" loading="lazy">
                 <div class="team_name">Timnas</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/australia.html" alt="Southern Stars">
-                <img src="/assets/img/flags/australia.svg" alt="Southern Stars" loading="lazy">
+                <img src="/assets/img/teams/STARS.png" alt="Southern Stars" loading="lazy">
                 <div class="team_name">Southern Stars</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/malaysia.html" alt="Tiger Spirit">
-                <img src="/assets/img/flags/malaysia.svg" alt="Tiger Spirit" loading="lazy">
+                <img src="/assets/img/teams/TIGER.png" alt="Tiger Spirit" loading="lazy">
                 <div class="team_name">Tiger Spirit</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/mongolia.html" alt="Steppe Thunder">
-                <img src="/assets/img/flags/mongolia.svg" alt="Steppe Thunder" loading="lazy">
+                <img src="/assets/img/teams/STEPPE.png" alt="Steppe Thunder" loading="lazy">
                 <div class="team_name">Steppe Thunder</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/philippines.html" alt="Tropic Blaze">
-                <img src="/assets/img/flags/philippines.svg" alt="Tropic Blaze" loading="lazy">
+                <img src="/assets/img/teams/TROPIC.png" alt="Tropic Blaze" loading="lazy">
                 <div class="team_name">Tropic Blaze</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/singapore.html" alt="Lion City Legends">
-                <img src="/assets/img/flags/singapore.svg" alt="Lion City Legends" loading="lazy">
+                <img src="/assets/img/teams/LION.png" alt="Lion City Legends" loading="lazy">
                 <div class="team_name">Lion City Legends</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/korea.html" alt="Hongdaegenus">
-                <img src="/assets/img/flags/korea.svg" alt="Hongdaegenus" loading="lazy">
+                <img src="/assets/img/teams/HONG.png" alt="Hongdaegenus" loading="lazy">
                 <div class="team_name">Hongdaegenus</div>
             </a>
         </div>
         <div class="team">
             <a href="teams/continental/india.html" alt="Indus Warriors">
-                <img src="/assets/img/flags/india.svg" alt="Indus Warriors" loading="lazy">
+                <img src="/assets/img/teams/INDUS.png" alt="Indus Warriors" loading="lazy">
                 <div class="team_name">Indus Warriors</div>
             </a>
         </div>
