--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             <a id="nav-standings" href="pages/standings.html">Standings</a>
         </div>
     </div>
+
+    <div class="gfx">
+        <img src="/assets/img/cover_s2.png">
+    </div>
+    
+
+
 </body>
 
 </html>
